feat: rpc role deploy

--- a/test/Makefile
+++ b/test/Makefile
@@ -22,16 +22,29 @@ DOCKERCOMPOSEPERMISSIONLESSZKPROVER := zkevm-permissionless-prover
 DOCKERCOMPOSENODEAPPROVE := zkevm-approve
 DOCKERCOMPOSEMETRICS := zkevm-metrics
 DOCKERCOMPOSEGRAFANA := grafana
+DOCKERCOMPOSERPCSTATEDB := zkevm-rpc-state-db
+DOCKERCOMPOSERPCPOOLDB := zkevm-rpc-pool-db
+DOCKERCOMPOSERPCEVENTDB := zkevm-rpc-event-db
+DOCKERCOMPOSERPCAPPRPC := zkevm-rpc-json-rpc
+DOCKERCOMPOSERPCAPPSYNC := zkevm-rpc-sync
+DOCKERCOMPOSERPCZKPROVER := zkevm-rpc-prover
+DOCKERCOMPOSERPCAPPL2GASP := zkevm-rpc-l2gaspricer
 
 RUNSTATEDB := $(DOCKERCOMPOSE) up -d $(DOCKERCOMPOSESTATEDB)
 RUNPOOLDB := $(DOCKERCOMPOSE) up -d $(DOCKERCOMPOSEPOOLDB)
 RUNEVENTDB := $(DOCKERCOMPOSE) up -d $(DOCKERCOMPOSEEVENTDB)
+RUNRPCSTATEDB := $(DOCKERCOMPOSE) up -d $(DOCKERCOMPOSERPCSTATEDB)
+RUNRPCPOOLDB := $(DOCKERCOMPOSE) up -d $(DOCKERCOMPOSERPCPOOLDB)
+RUNRPCEVENTDB := $(DOCKERCOMPOSE) up -d $(DOCKERCOMPOSERPCEVENTDB)
 RUNSEQUENCER := $(DOCKERCOMPOSE) up -d $(DOCKERCOMPOSEAPPSEQ)
 RUNSEQUENCESENDER := $(DOCKERCOMPOSE) up -d $(DOCKERCOMPOSEAPPSEQSENDER)
 RUNL2GASPRICER := $(DOCKERCOMPOSE) up -d $(DOCKERCOMPOSEAPPL2GASP)
+RUNRPCL2GASPRICER := $(DOCKERCOMPOSE) up -d $(DOCKERCOMPOSERPCAPPL2GASP)
 RUNAGGREGATOR := $(DOCKERCOMPOSE) up -d $(DOCKERCOMPOSEAPPAGG)
 RUNJSONRPC := $(DOCKERCOMPOSE) up -d $(DOCKERCOMPOSEAPPRPC)
 RUNSYNC := $(DOCKERCOMPOSE) up -d $(DOCKERCOMPOSEAPPSYNC)
+RUNRPCJSONRPC := $(DOCKERCOMPOSE) up -d $(DOCKERCOMPOSERPCAPPRPC)
+RUNRPCSYNC := $(DOCKERCOMPOSE) up -d $(DOCKERCOMPOSERPCAPPSYNC)
 RUNETHTXMANAGER := $(DOCKERCOMPOSE) up -d $(DOCKERCOMPOSEAPPETHTXMANAGER)
 RUNGRAFANA := DOCKERGID=`stat -c '%g' /var/run/docker.sock` $(DOCKERCOMPOSE) up -d $(DOCKERCOMPOSEGRAFANA)
 
@@ -42,6 +55,7 @@ RUNEXPLORERL2 := $(DOCKERCOMPOSE) up -d $(DOCKERCOMPOSEEXPLORERL2)
 RUNEXPLORERL2DB := $(DOCKERCOMPOSE) up -d $(DOCKERCOMPOSEEXPLORERL2DB)
 RUNEXPLORERJSONRPC := $(DOCKERCOMPOSE) up -d $(DOCKERCOMPOSEEXPLORERRPC)
 RUNZKPROVER := $(DOCKERCOMPOSE) up -d $(DOCKERCOMPOSEZKPROVER)
+RUNRPCZKPROVER := $(DOCKERCOMPOSE) up -d $(DOCKERCOMPOSERPCZKPROVER)
 
 RUNPERMISSIONLESSDB := $(DOCKERCOMPOSE) up -d $(DOCKERCOMPOSEPERMISSIONLESSDB)
 RUNPERMISSIONLESSNODE := $(DOCKERCOMPOSE) up -d $(DOCKERCOMPOSEPERMISSIONLESSNODE)
@@ -482,6 +496,33 @@ run: ## Runs a full node
 	$(RUNL2GASPRICER)
 	$(RUNAGGREGATOR)
 	$(RUNJSONRPC)
+
+.PHONY: run-roles
+run-roles: ## Runs the network according to the roles
+	$(RUNL1NETWORK)
+	sleep 10
+	echo "Start running rpc roles services"
+	$(RUNRPCSTATEDB)
+	$(RUNRPCPOOLDB)
+	$(RUNRPCEVENTDB)
+	sleep 5
+	$(RUNRPCZKPROVER)
+	sleep 5
+	$(RUNRPCSYNC)
+	sleep 5
+	$(RUNRPCL2GASPRICER)
+	$(RUNRPCJSONRPC)
+
+.PHONY: stop-roles
+stop-roles: ## Stops the network according to the roles
+	$(STOPRPCJSONRPC)
+	$(STOPRPCL2GASPRICER)
+	$(STOPRPCSYNC)
+	$(STOPRPCZKPROVER)
+	$(STOPRPCEVENTDB)
+	$(STOPRPCPOOLDB)
+	$(STOPRPCSTATEDB)
+	$(STOPL1NETWORK)
 
 .PHONY: stop
 stop: ## Stops all services
