fix: add aggregator
Signed-off-by: 0x677261706562616261 <0x677261706562616261@gmail.com>

--- a/test/Makefile
+++ b/test/Makefile
@@ -556,6 +556,7 @@ run-roles: ## Runs the network according to the roles
 	$(RUNAGGZKPROVER1)
 	sleep 5
 	$(RUNAGGETHTXMANAGER)
+	$(RUNAGGREGATOR)
 
 
 .PHONY: stop-roles
