--- a/test/config/test.rpc.node.config.toml
+++ b/test/config/test.rpc.node.config.toml
@@ -81,6 +81,7 @@ EnableL2SuggestedGasPricePolling = true
 SyncInterval = "2s"
 SyncChunkSize = 100
 TrustedSequencerURL = "http://zkevm-json-rpc:8123" # If it is empty or not specified, then the value is read from the smc.
+L1SynchronizationMode = "sequential" # "sequential" or "parallel"
 
 [Sequencer]
 WaitPeriodPoolIsEmpty = "1s"
